WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127826
[iOS] UI process crashes whenever web process crashes
https://bugs.webkit.org/show_bug.cgi?id=127826
Summary
[iOS] UI process crashes whenever web process crashes
Ian Henderson
Reported
2014-01-28 20:12:43 PST
UI process crashes whenever web process crashes
Attachments
proposed patch
(1.61 KB, patch)
2014-01-28 20:14 PST
,
Ian Henderson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ian Henderson
Comment 1
2014-01-28 20:14:16 PST
Created
attachment 222550
[details]
proposed patch
WebKit Commit Bot
Comment 2
2014-01-28 21:18:01 PST
Comment on
attachment 222550
[details]
proposed patch Clearing flags on attachment: 222550 Committed
r163001
: <
http://trac.webkit.org/changeset/163001
>
WebKit Commit Bot
Comment 3
2014-01-28 21:18:04 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug