[iOS] UI process crashes whenever web process crashes https://bugs.webkit.org/show_bug.cgi?id=127826

Patch by Ian Henderson <ianh@apple.com> on 2014-01-28
Reviewed by Tim Horton.

* UIProcess/API/ios/WKContentView.mm:
(-[WKContentView _updateFixedPositionRect]): Null-check the drawing
area before calling size() on it.

Canonical link: https://commits.webkit.org/145830@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163001 268f45cc-cd09-0410-ab3c-d52691b4dbfc